[package]
name = "ruuvi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.9", features = ["serde"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
futures = "0.3.21"
pretty_env_logger = "0.4.0"
uuid = "0.8.2"
ruuvi-sensor-protocol = "0.5.0"
hwaddr = "0.1.7"
influxdb2 = "0.1.0"
escape_string = "0.1"