[package]
name = "ruuvi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hwaddr = "0.1"
ruuvi-sensor-protocol = "0.5"
btleplug = "0.9"
futures = "0.3.21"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.3.1"
toml = "0.5"
macaddr = { version = "1.0", features = ["serde_std"] }